# test_login_form

./: .gitignore  Dockerfile  Dokerfile  Makefile  README.rst  pyproject.toml  requirements.txt
tests/: test_form.py  test_task_koshelek.py  test_test_task_koshelek.py
